plugins {
    id 'com.android.application'
}

apply from: '../keystore.gradle'

android {
    namespace 'com.xcheng.xclogger'
    compileSdk 33

    defaultConfig {
        applicationId "com.xcheng.xclogger"
        minSdk 29
        targetSdk 33
        versionCode 8
        versionName "1.2.15"
    }

    buildTypes {
        debug {
            // Force debug build to use flavor's signingConfig (not default debug key)
            signingConfig null
        }
        release {
            // 启用混淆与资源压缩
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    signingConfigs {
        keystoreConfigs.each { name, cfg ->
            if (cfg.storePath != null && !cfg.storePath.isEmpty()) {
                create(name) {
                    storeFile file(cfg.storePath)
                    storePassword cfg.storePassword
                    keyAlias cfg.keyAlias
                    keyPassword cfg.keyPassword
                }
            }
        }
    }

    flavorDimensions "customer"

    productFlavors {
        p1416TPinelabs {
            dimension "customer"
            applicationId keystoreConfigs.p1416TPinelabs.applicationId
            resValue "string", "flavor_config", "p1416t_pinelabs_default_config"
            signingConfig keystoreConfigs.p1416TPinelabs.storePath ? signingConfigs.p1416TPinelabs : null
        }
        r2351Combo {
            dimension "customer"
            applicationId keystoreConfigs.r2351Combo.applicationId
            resValue "string", "flavor_config", "r2351_combo_default_config"
            signingConfig keystoreConfigs.r2351Combo.storePath ? signingConfigs.r2351Combo : null
        }
        common {
            dimension "customer"
            applicationId "com.xcheng.xclogger"
            resValue "string", "flavor_config", "default_config"
            signingConfig signingConfigs.debug
        }
    }

    applicationVariants.all { variant ->
        def baseName = "XCLogger"
        def buildType = variant.buildType.name
        def versionName = variant.versionName ?: "V1.0.0"
        def versionCode = variant.versionCode ?: 1
        def timestamp = new Date().format("yyyyMMddHHmm")
        def apkName

        if (buildType == "debug") {
            apkName = "${baseName}_v${versionName}_${timestamp}.apk"
        } else {
            apkName = "${baseName}_v${versionName}_${timestamp}.apk"
        }

        apkName = apkName.replaceAll("[^a-zA-Z0-9_.-]", "_")

        variant.outputs.each { output ->
            output.outputFileName = apkName
        }
    }
    buildFeatures {
        aidl true
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.8.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
}

afterEvaluate {
    // Restore test tasks lost when productFlavors were added
    tasks.register('assembleDebugUnitTest')     { dependsOn 'assembleCommonDebugUnitTest' }
    tasks.register('assembleReleaseUnitTest')   { dependsOn 'assembleCommonReleaseUnitTest' }
    tasks.register('assembleDebugAndroidTest')  { dependsOn 'assembleCommonDebugAndroidTest' }
    tasks.register('assembleReleaseAndroidTest'){ dependsOn 'assembleCommonReleaseAndroidTest' }

    // Build APK(s): select 'commonDebug' variant to build ALL flavor APKs
    tasks.named('assembleCommonDebug').configure {
        dependsOn 'assembleP1416TPinelabsDebug'
    }
}